--- a/sports.html
+++ b/sports.html
@@ -49,8 +49,7 @@
             <p>Kabaddi is a contact team sport played between two teams of seven players, originating from India. The
                 objective of the game is for a single player on offense, referred to as a "raider", to run into the
                 opposing team's half of the court, touch out as many of their players and return to their own half of
-                the court, all without being tackled by the defenders in 30 seconds. Points are scored for each player
-                tagged by the raider, while the opposing team earns a point for stopping the raider.</p>
+                the court, all without being tackled by the defenders in 30 seconds. </p>
         </div>
         <div class="box">
             <h4 class="heading">Basketball</h4>
